// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductFormService createProductFormGroup should create form group 1`] = `
Object {
  "allergens": Array [],
  "configSets": Array [],
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "image": "",
  "isVisible": "",
  "laneId": "",
  "name": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "productCategoryId": "",
  "productType": "",
  "supportedServingModes": Array [],
  "takeawayTax": null,
  "tax": null,
  "variants": Array [],
}
`;

exports[`ProductFormService createUnitProduct$ should create unit product 1`] = `
Object {
  "data": Object {
    "allergens": null,
    "configSets": null,
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": null,
    "dirty": null,
    "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
    "image": null,
    "isVisible": true,
    "laneId": "laneId_",
    "name": Object {
      "de": null,
      "en": "PRODUCT NAME",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "NOT GIVEN",
    "productType": "dish",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeaway": true,
    "takeawayTax": null,
    "tax": 0,
    "unitId": "unitId_",
    "updatedAt": Any<String>,
    "variants": Array [
      Object {
        "availabilities": Array [
          Object {
            "dayFrom": "",
            "dayTo": "",
            "price": 1.5,
            "timeFrom": "",
            "timeTo": "",
            "type": "A",
          },
        ],
        "externalId": null,
        "id": "test_UnitProductVariant_id_1",
        "isAvailable": true,
        "netPackagingFee": 400,
        "ownerProduct": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 30,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "availabilities": Array [
          Object {
            "dayFrom": "",
            "dayTo": "",
            "price": 3,
            "timeFrom": "",
            "timeTo": "",
            "type": "A",
          },
        ],
        "externalId": null,
        "id": "test_UnitProductVariant_id_2",
        "isAvailable": true,
        "netPackagingFee": 400,
        "ownerProduct": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 60,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  "type": "insert",
}
`;

exports[`ProductFormService patchConfigSet should add configsets to form array 1`] = `Array []`;

exports[`ProductFormService updateUnitProduct$ should update unit product 1`] = `
Object {
  "data": Object {
    "allergens": null,
    "configSets": null,
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": null,
    "dirty": null,
    "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
    "image": null,
    "isVisible": false,
    "laneId": "laneId_",
    "name": Object {
      "de": null,
      "en": "PRODUCT NAME",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "NOT GIVEN",
    "productType": "dish",
    "supportedServingModes": Array [
      "inPlace",
    ],
    "takeaway": true,
    "takeawayTax": null,
    "tax": 0,
    "unitId": "unitId_",
    "updatedAt": Any<String>,
    "variants": Array [
      Object {
        "availabilities": Array [
          Object {
            "dayFrom": "",
            "dayTo": "",
            "price": 1.5,
            "timeFrom": "",
            "timeTo": "",
            "type": "A",
          },
        ],
        "externalId": null,
        "id": "test_UnitProductVariant_id_1",
        "isAvailable": true,
        "netPackagingFee": 400,
        "ownerProduct": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 30,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "availabilities": Array [
          Object {
            "dayFrom": "",
            "dayTo": "",
            "price": 3,
            "timeFrom": "",
            "timeTo": "",
            "type": "A",
          },
        ],
        "externalId": null,
        "id": "test_UnitProductVariant_id_2",
        "isAvailable": true,
        "netPackagingFee": 400,
        "ownerProduct": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 60,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  "type": "update",
}
`;
